# graph-reduction-query-planning

./: evaluation.py  main.py  pyproject.toml  query.py  sets.py  test_sets.py
korp/: corpus.py  index.py  literals.py  util.py
src/grqe/: cli.py  debug.py  evaluation.py  fetch.py  fputil.py  indexer.py  main.py  parser.py  query.py  server.py  sets.py  transformations.py  type_definitions.py  types.py  util.py
src/grqe/corpus/: __init__.py  build_index.py  corpus.py  disk.py  encode.py  frequencies.py  index.py  parser.py  util.py
src/grqe/cqp/: __init__.py  frontend.py
src/grqe/index/: corpus.py  disk.py  util.py
src/grqe/korp/: __init__.py  corpus.py  disk.py  index.py  literals.py  util.py
src/grqe/profiling/: __init__.py  display.py  profiling.py  server.py
src/grqe/profiling/static/: query_table.html  svg_viewport.html
tests/: test_sets.py  test_transforms.py
tests/constants/: test_set_coefficients.py
tests/properties/: test_sets.py  test_transforms.py
tests/runtime_behavior/: arbitrary_set.py  bitmap_cutoff.py  byte_size.py  setop_benchmarks.py  test_set_coefficients.py
tests/unittests/: test_parser.py  test_transforms.py
