[project]
name = "grqe"
description = "A Graph-Reduction-based Query Engine"

version = "0.0.1a1"

dependencies = [
    'pyroaring==1.0.4',
    'lark==1.3.1',
    'networkx==3.6.1',
    'graphviz==0.21',

    'cachetools==7.0.5',

    'Flask==3.1.3',
]

[project.optional-dependencies]
test = [
    'hypothesis==6.*',
]

